# Tabs

./: README.md  io.github.clero2020.tabs.json  meson.build  org.clero.tabs.json
data/: io.github.clero2020.tabs.desktop.in  io.github.clero2020.tabs.gschema.xml  io.github.clero2020.tabs.metainfo.xml.in  io.github.clero2020.tabs.service.in  meson.build  org.clero.tabs.desktop.in  org.clero.tabs.gschema.xml  org.clero.tabs.metainfo.xml.in  org.clero.tabs.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  scraper.py  tabs.gresource.xml  tabs.in  window.py  window.ui
